--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Résumé</title>
+	<meta name="description" content="My very own personal website.">
+	<meta name="google-site-verification" content="f6xP5kfHXt9-CT6GgRGPfiYsrTwTSuZ8K-6uT4rFzXM">
+	<meta name="google" content="nositelinkssearchbox">
+	<meta name="google" content="notranslate">
+	<meta name="googlebot" content="index,follow">
+	<meta name="robots" content="index,follow">
+	<meta name="subject" content="This is just a résumé.">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="white">
+	<title>Donald Trump &mdash; Résumé</title>
+	<link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
   </head>
   <body>
     ― Hello World! &#x1F609;
